--- a/Session-4/myapp/src/app/binding/binding.component.html
+++ b/Session-4/myapp/src/app/binding/binding.component.html
@@ -14,4 +14,27 @@
 <hr>
 <a [href]="url">Connect to Google</a>
 
+<h3>Print JSON Array</h3>
+
+<table class="table table-striped table-bordered">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Price</th> 
+            <th>Availability</th>
+            <th>Rating</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!--ngDirectives-->
+        <tr *ngFor="let p of products">
+            <td [class.inStock]="true">{{p.name}}</td>
+            <td [style.font-weight]="we">{{p.price}}</td>
+            <td>{{p.available}}</td>
+            <td>{{p.rating}}</td>
+
+        </tr>
+    </tbody>
+</table>
+
 
