--- a/Session-4/myapp/src/app/binding/binding.component.html
+++ b/Session-4/myapp/src/app/binding/binding.component.html
@@ -38,3 +38,13 @@
 </table>
 
 
+<hr>
+<div class="container-fluid">
+    <button class="btn btn-primary" (click)="show()">Show Div</button>
+
+    <div *ngIf="flag" style="background-color: violet;">
+        This is my div
+    </div>
+</div>
+
+
