pipes,custom pipes

--- a/Session-6/myapp1/src/app/app.component.html
+++ b/Session-6/myapp1/src/app/app.component.html
@@ -1,2 +1,22 @@
-<h1>Inbuilt Pipe Demo</h1>
-<app-pipedemo></app-pipedemo>
+<h1>Pipe Demo And Routing</h1>
+
+<ul class="nav">
+    <li class="nav-item">
+        <a class="nav-link" routerLink="home">Home</a>
+        
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="aboutus">About Us</a>
+        
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="contactus">Contact Us</a>
+        
+    </li>
+
+    <li class="nav-item">
+        <a class="nav-link" routerLink="user">User</a>
+        
+    </li>
+</ul>
+<router-outlet></router-outlet>
