--- a/Session-6/myapp1/src/app/app.component.html
+++ b/Session-6/myapp1/src/app/app.component.html
@@ -18,5 +18,9 @@
         <a class="nav-link" routerLink="user">User</a>
         
     </li>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="test">Test</a>
+        
+    </li>
 </ul>
 <router-outlet></router-outlet>
